fixed something in card purchase